# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/api",
     "paths": {
-        "/v1/liveness": {
+        "/v1/livenessHandler": {
             "get": {
                 "description": "Check service health return \"OK\"",
                 "produces": [
@@ -28,7 +28,7 @@
                 }
             }
         },
-        "/v1/readiness": {
+        "/v1/readinessHandler": {
             "get": {
                 "description": "Check connection to database and other services",
                 "produces": [
@@ -45,6 +45,12 @@
                             "$ref": "#/definitions/health.readinessResponseUp"
                         }
                     },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errs.HTTPError"
+                        }
+                    },
                     "503": {
                         "description": "Service Unavailable",
                         "schema": {
@@ -56,6 +62,17 @@
         }
     },
     "definitions": {
+        "errs.HTTPError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "health.livenessStatus": {
             "type": "string",
             "enum": [
