# internal/modules/health/controller.go
@@ -4,6 +4,6 @@ import "github.com/gin-gonic/gin"
 
 func (m *Module) setupController(router *gin.RouterGroup) {
 	api := router.Group("/v1")
-	api.GET("/liveness", m.liveness)
-	api.GET("/readiness", m.readiness)
+	api.GET("/liveness", m.livenessHandler)
+	api.GET("/readiness", m.readinessHandler)
 }
